# SVF-example

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app.py  cmake_install.cmake  env.sh  example.c  example.ll  main.py  main.ui  requirements.txt  swap.bc  swap.svf.bc
.github/workflows/: cmake.yml  svf-example-build.yml
llvm-pass/: CMakeLists.txt  README.md  run_pass.sh
llvm-pass/.cache/clangd/index/: example.c.6D94A0BA49A3E54E.idx  svf-pass.cpp.09354919EEC73FEC.idx  svf-pass.hpp.9CBEE7202F4A0FCD.idx
llvm-pass/src/: svf-pass.cpp  svf-pass.hpp
src/: Andersen_pta.cpp  Andersen_pta.h  CMakeLists.txt  Makefile  callgraph.dot  cmake_install.cmake  icfg.dot  pag.dot  svf-ex.cpp  svf-example.cpp  svfg.dot  vfg.dot
standalone-tool/: CMakeLists.txt  README.md
standalone-tool/src/: example.c  svf-tool.cpp
svf-example-py/: .gitignore  CMakeLists.txt  README.md  env.sh
svf-example-py/.github/workflows/: svf-example-build.yml
svf-example-py/src/: svf-ex.py  svfLLVMUtil.py  svfModule.py
svf-example-py/src/svfLLVMUtil/: CMakeLists.txt  llvm_util.cpp
svf-example-py/src/svfModule/: CMakeLists.txt  svfModule.cpp
test_cases/: pta_test.bc  pta_test.c  test1.bc  test1.c  test2.bc  test2.c  test3.bc  test3.c  test4.bc  test4.c
tools/: CMakeLists.txt
